// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> snapshot 1`] = `
<div>
  <div
    class="dropdown block"
  >
    <label
      class="form-control w-full flex flex-row gap-2"
      for="test"
    >
      <div
        class="relative"
      >
        <input
          class="input input-bordered w-full textbox-size-md textbox-with-right-icon"
          data-testid="test"
          id="test"
          name="test"
          tabindex="0"
          value=""
        />
        <svg
          class="textbox-right-icon textbox-right-icon-size-md cursor-pointer"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z"
          />
        </svg>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Dropdown /> snapshot full 1`] = `
<div>
  <div
    class="dropdown block"
  >
    <label
      class="form-control w-full flex flex-row gap-2"
      for="test"
    >
      <div
        class="label"
      >
        <span
          class="label-text"
        >
          Label
        </span>
      </div>
      <div
        class="relative"
      >
        <input
          class="input input-bordered w-full textbox-size-md input-error textbox-with-right-icon"
          data-testid="test"
          disabled=""
          id="test"
          name="test"
          tabindex="0"
          value=""
        />
        <svg
          class="textbox-right-icon textbox-right-icon-size-md cursor-not-allowed"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z"
          />
        </svg>
      </div>
      <p
        class="text-red-500 flex items-center"
      >
        Error
      </p>
    </label>
  </div>
</div>
`;
